[package]
name = "watch"
version = "0.0.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
command-group = "5"
ctrlc = "3"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
serde = {version="1.0",features=["derive"]}
serde_json = "1.0.150"
shell-words = "1.1.1"
toml="0.8"
